--- a/package.json
+++ b/package.json
@@ -31,14 +31,21 @@
     "@angular-devkit/build-angular": "^19.0.0-next.2",
     "@angular/cli": "^19.0.0-next.2",
     "@angular/compiler-cli": "^19.0.0-next.2",
+    "@babel/preset-env": "^7.25.8",
+    "@babel/preset-typescript": "^7.25.7",
     "@types/jasmine": "~3.10.0",
+    "@types/jest": "^29.5.13",
     "@types/node": "^12.11.1",
+    "babel-jest": "^29.7.0",
     "jasmine-core": "~3.10.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "ts-jest": "^29.2.5",
     "typescript": "~5.5.2"
   }
 }
