--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "private": true,
   "dependencies": {
@@ -33,18 +34,13 @@
     "@angular/compiler-cli": "^19.0.0-next.2",
     "@babel/preset-env": "^7.25.8",
     "@babel/preset-typescript": "^7.25.7",
-    "@types/jasmine": "~3.10.0",
     "@types/jest": "^29.5.13",
     "@types/node": "^12.11.1",
     "babel-jest": "^29.7.0",
-    "jasmine-core": "~3.10.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "karma": "~6.3.0",
-    "karma-chrome-launcher": "~3.1.0",
+    "jest-preset-angular": "^14.2.4",
     "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
     "ts-jest": "^29.2.5",
     "typescript": "~5.5.2"
   }
